HelloUltraviolet/Fixtures/RejectedSource/Statements/AsyncReturnUnitMismatch/Expected.uv
//! Expected diagnostic metadata for the AsyncReturnUnitMismatch rejected-source specimen.

expectedDiagnostic("E-CON-0203", "rule.18.Return-Async-Unit-Err")
